# Tubes3_Qtpy_coba

./: .gitignore  README.md  kaggle.json  main.py  pyproject.toml  requirements.txt  resumes.db
src/algorithms/: __init__.py  aho_corasick.py  boyer_moore.py  fuzzy_search.py  kmp.py
src/config/: config.py
src/database/: ingest.py  models.py  parser.py  pdf_utils.py  setup.py  tubes3.sql  tubes3_schema.sql  tubes3_seeding.sql
src/encryption/: CAE.py
src/gui_components/: cv_summary_window.py  general_config.py  header.py  input.py  result.py  search.py
src/search_algorithms/: __init__.py  aho_corasick.py  boyer_moore.py  fuzzy_searcher.py  kmp_searcher.py  pattern_searcher.py  search_engine.py
src/service/: encryptservice.py  searchservice.py  service_provider.py  threadservice.py
test/: test.py  testCVGUI.py  testSearch.py  test_kmp.py  test_string_matching.py  testsum.py
